// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Favorite tracks view container should display empty state 1`] = `
<DocumentFragment>
  <div
    class="main_layout_container"
  >
    <div
      class="favorite_tracks_view"
    >
      <div
        class="empty_state"
      >
        <i
          class="icons"
        >
          <i
            aria-hidden="true"
            class="star icon"
          />
          <i
            aria-hidden="true"
            class="music corner icon"
          />
        </i>
        <h2>
          No favorites added
        </h2>
        <div>
          Try adding some tracks to favorites and they will appear here!
        </div>
      </div>
    </div>
  </div>
  <div
    class="nuclear player_bar"
  >
    <div
      class="nuclear seekbar"
      data-testid="seekbar"
    >
      <div
        class="nuclear seekbar_progress"
        data-testid="seekbar-fill"
        style="width: 0%;"
      />
    </div>
    <div
      class="player_bar_bottom"
    >
      <div
        class="track_info"
      >
        <div
          class="nuclear cover_container"
        >
          <img
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="player_controls"
      >
        <button
          class="player_button disabled"
          data-testid="player-controls-back"
        >
          <i
            aria-hidden="true"
            class="step backward large inverted icon"
          />
        </button>
        <button
          class="player_button disabled"
          data-testid="player-controls-play"
        >
          <i
            aria-hidden="true"
            class="play big inverted icon"
          />
        </button>
        <button
          class="player_button disabled"
          data-testid="player-controls-forward"
        >
          <i
            aria-hidden="true"
            class="step forward large inverted icon"
          />
        </button>
      </div>
      <div
        class="volume_controls_container"
      >
        <div
          class="play_options"
        >
          <i
            aria-hidden="true"
            class="repeat large icon play_option_icon"
            data-testid="loop-play-option"
          />
          <i
            aria-hidden="true"
            class="random large icon play_option_icon"
            data-testid="shuffle-play-option"
          />
          <i
            aria-hidden="true"
            class="magic large icon play_option_icon"
            data-testid="autoradio-play-option"
          />
          <i
            aria-hidden="true"
            class="compress large icon play_option_icon"
            data-testid="mini-player-play-option"
          />
        </div>
        <div
          class="volume_controls"
        >
          <div
            class="volume_icon"
          >
            <i
              aria-hidden="true"
              class="volume up large icon"
            />
          </div>
          <div
            class="volume_slider"
          >
            <div
              class="range"
              style="width: 100%;"
            >
              <div
                class="baseDiv"
                style="height: 12px;"
              >
                <div
                  class="track"
                  style="border-radius: 4px; background: rgb(68, 71, 90); top: 4px; height: 4px;"
                />
                <div
                  class="fill"
                  style="border-radius: 4px; background: rgb(248, 248, 242); width: calc(100% * 0.5 + 6px); top: 4px; height: 4px;"
                />
                <div
                  class="thumb"
                  style="width: 12px; height: 12px; border-radius: 12px; background: rgb(248, 248, 242);"
                />
                <input
                  class="range_input"
                  max="100"
                  min="0"
                  style="top: 4px; height: 12px; width: calc(100% - 12px); margin-left: 6px; margin-right: 6px;"
                  type="range"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Favorite tracks view container should display favorite tracks 1`] = `
<DocumentFragment>
  <div
    class="main_layout_container"
  >
    <div
      class="favorite_tracks_view"
    >
      <div
        class="header_container"
      >
        Your favorite tracks
        <button
          class="ui large basic icon button nuclear button"
          data-testid="favorite-tracks-header-play-random"
        >
          <i
            aria-hidden="true"
            class="gift icon"
          />
        </button>
      </div>
      <div
        class="ui segment"
      >
        <table
          class="track_table"
          role="table"
        >
          <thead>
            <tr
              role="row"
            >
              <th
                colspan="1"
                role="columnheader"
              >
                 
              </th>
              <th
                colspan="1"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <span
                  class="title_with_icon"
                  data-testid="position-header"
                >
                  <i
                    aria-hidden="true"
                    class="hashtag icon"
                  />
                  <i
                    aria-hidden="true"
                    class="sort content ascending icon"
                  />
                </span>
              </th>
              <th
                colspan="1"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <span
                  class="center_aligned"
                >
                  <i
                    aria-hidden="true"
                    class="image icon"
                  />
                </span>
              </th>
              <th
                colspan="1"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <span
                  class="title_with_icon"
                >
                  Title
                  <i
                    aria-hidden="true"
                    class="sort content ascending disabled icon"
                  />
                </span>
              </th>
              <th
                colspan="1"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <span
                  class="title_with_icon"
                >
                  Artist
                  <i
                    aria-hidden="true"
                    class="sort content ascending disabled icon"
                  />
                </span>
              </th>
              <th
                colspan="1"
                role="columnheader"
              >
                <span
                  class="select_header"
                >
                  <div
                    class="ui fitted checkbox nuclear checkbox"
                    style="cursor: pointer;"
                  >
                    <input
                      class="hidden"
                      readonly=""
                      tabindex="0"
                      title="Toggle All Rows Selected"
                      type="checkbox"
                      value=""
                    />
                    <label />
                  </div>
                </span>
              </th>
            </tr>
          </thead>
          <tbody
            data-rbd-droppable-context-id="0"
            data-rbd-droppable-id="track_table"
            role="rowgroup"
          >
            <tr
              class=""
              data-rbd-draggable-context-id="0"
              data-rbd-draggable-id="test track 2 1"
              data-testid="track-table-row"
              role="row"
            >
              <td
                class="narrow delete_cell"
                role="cell"
              >
                <button
                  class="ui tiny basic circular icon button nuclear button borderless"
                  data-testid="delete-button"
                >
                  <i
                    aria-hidden="true"
                    class="times icon"
                  />
                </button>
              </td>
              <td
                class="position_cell narrow"
                data-testid="position-cell"
                role="cell"
              >
                <button
                  class="ui pink tiny circular icon button nuclear button add_button"
                  data-testid="play-now"
                >
                  <i
                    aria-hidden="true"
                    class="play icon"
                  />
                </button>
                <span
                  class="position_cell_value"
                >
                  1
                </span>
              </td>
              <td
                class="thumbnail_cell narrow"
                role="cell"
              >
                <img
                  class="thumbnail"
                  src="https://test-track-thumb-url"
                />
              </td>
              <td
                class="title_cell"
                data-testid="title-cell"
                role="cell"
              >
                <span
                  class="title_cell_content"
                >
                  <span
                    class="title_cell_value"
                  >
                    test track 2
                  </span>
                  <span
                    class="title_cell_buttons"
                  >
                    <button
                      class="ui tiny basic circular icon button nuclear button borderless title_cell_button"
                      data-testid="add-to-queue"
                    >
                      <i
                        aria-hidden="true"
                        class="plus icon"
                      />
                    </button>
                    <button
                      class="ui tiny basic circular icon button nuclear button borderless title_cell_button"
                      data-testid="track-popup-trigger"
                    >
                      <i
                        aria-hidden="true"
                        class="ellipsis horizontal icon"
                      />
                    </button>
                  </span>
                </span>
              </td>
              <td
                role="cell"
              >
                test artist 2
              </td>
              <td
                class="select_cell narrow"
                role="cell"
              >
                <div
                  class="ui fitted checkbox nuclear checkbox"
                  style="cursor: pointer;"
                >
                  <input
                    class="hidden"
                    readonly=""
                    tabindex="0"
                    title="Toggle Row Selected"
                    type="checkbox"
                    value=""
                  />
                  <label />
                </div>
              </td>
            </tr>
            <tr
              class=""
              data-rbd-draggable-context-id="0"
              data-rbd-draggable-id="test track 1 0"
              data-testid="track-table-row"
              role="row"
            >
              <td
                class="narrow delete_cell"
                role="cell"
              >
                <button
                  class="ui tiny basic circular icon button nuclear button borderless"
                  data-testid="delete-button"
                >
                  <i
                    aria-hidden="true"
                    class="times icon"
                  />
                </button>
              </td>
              <td
                class="position_cell narrow"
                data-testid="position-cell"
                role="cell"
              >
                <button
                  class="ui pink tiny circular icon button nuclear button add_button"
                  data-testid="play-now"
                >
                  <i
                    aria-hidden="true"
                    class="play icon"
                  />
                </button>
                <span
                  class="position_cell_value"
                >
                  2
                </span>
              </td>
              <td
                class="thumbnail_cell narrow"
                role="cell"
              >
                <img
                  class="thumbnail"
                  src="https://test-track-thumb-url"
                />
              </td>
              <td
                class="title_cell"
                data-testid="title-cell"
                role="cell"
              >
                <span
                  class="title_cell_content"
                >
                  <span
                    class="title_cell_value"
                  >
                    test track 1
                  </span>
                  <span
                    class="title_cell_buttons"
                  >
                    <button
                      class="ui tiny basic circular icon button nuclear button borderless title_cell_button"
                      data-testid="add-to-queue"
                    >
                      <i
                        aria-hidden="true"
                        class="plus icon"
                      />
                    </button>
                    <button
                      class="ui tiny basic circular icon button nuclear button borderless title_cell_button"
                      data-testid="track-popup-trigger"
                    >
                      <i
                        aria-hidden="true"
                        class="ellipsis horizontal icon"
                      />
                    </button>
                  </span>
                </span>
              </td>
              <td
                role="cell"
              >
                test artist 1
              </td>
              <td
                class="select_cell narrow"
                role="cell"
              >
                <div
                  class="ui fitted checkbox nuclear checkbox"
                  style="cursor: pointer;"
                >
                  <input
                    class="hidden"
                    readonly=""
                    tabindex="0"
                    title="Toggle Row Selected"
                    type="checkbox"
                    value=""
                  />
                  <label />
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <div
    class="nuclear player_bar"
  >
    <div
      class="nuclear seekbar"
      data-testid="seekbar"
    >
      <div
        class="nuclear seekbar_progress"
        data-testid="seekbar-fill"
        style="width: 0%;"
      />
    </div>
    <div
      class="player_bar_bottom"
    >
      <div
        class="track_info"
      >
        <div
          class="nuclear cover_container"
        >
          <img
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="player_controls"
      >
        <button
          class="player_button disabled"
          data-testid="player-controls-back"
        >
          <i
            aria-hidden="true"
            class="step backward large inverted icon"
          />
        </button>
        <button
          class="player_button disabled"
          data-testid="player-controls-play"
        >
          <i
            aria-hidden="true"
            class="play big inverted icon"
          />
        </button>
        <button
          class="player_button disabled"
          data-testid="player-controls-forward"
        >
          <i
            aria-hidden="true"
            class="step forward large inverted icon"
          />
        </button>
      </div>
      <div
        class="volume_controls_container"
      >
        <div
          class="play_options"
        >
          <i
            aria-hidden="true"
            class="repeat large icon play_option_icon"
            data-testid="loop-play-option"
          />
          <i
            aria-hidden="true"
            class="random large icon play_option_icon"
            data-testid="shuffle-play-option"
          />
          <i
            aria-hidden="true"
            class="magic large icon play_option_icon"
            data-testid="autoradio-play-option"
          />
          <i
            aria-hidden="true"
            class="compress large icon play_option_icon"
            data-testid="mini-player-play-option"
          />
        </div>
        <div
          class="volume_controls"
        >
          <div
            class="volume_icon"
          >
            <i
              aria-hidden="true"
              class="volume up large icon"
            />
          </div>
          <div
            class="volume_slider"
          >
            <div
              class="range"
              style="width: 100%;"
            >
              <div
                class="baseDiv"
                style="height: 12px;"
              >
                <div
                  class="track"
                  style="border-radius: 4px; background: rgb(68, 71, 90); top: 4px; height: 4px;"
                />
                <div
                  class="fill"
                  style="border-radius: 4px; background: rgb(248, 248, 242); width: calc(100% * 0.5 + 6px); top: 4px; height: 4px;"
                />
                <div
                  class="thumb"
                  style="width: 12px; height: 12px; border-radius: 12px; background: rgb(248, 248, 242);"
                />
                <input
                  class="range_input"
                  max="100"
                  min="0"
                  style="top: 4px; height: 12px; width: calc(100% - 12px); margin-left: 6px; margin-right: 6px;"
                  type="range"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-atomic="true"
    aria-live="assertive"
    id="rbd-announcement-0"
    style="position: absolute; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%);"
  />
  <div
    id="rbd-hidden-text-0-hidden-text-0"
    style="display: none;"
  >
    
  Press space bar to start a drag.
  When dragging you can use the arrow keys to move the item around and escape to cancel.
  Some screen readers may require you to be in focus mode or to use your pass through key

  </div>
</DocumentFragment>
`;

exports[`Favorite tracks view container should show a popup when a track is clicked 1`] = `
<DocumentFragment>
  <div
    class="main_layout_container"
  >
    <div
      class="favorite_tracks_view"
    >
      <div
        class="header_container"
      >
        Your favorite tracks
        <button
          class="ui large basic icon button nuclear button"
          data-testid="favorite-tracks-header-play-random"
        >
          <i
            aria-hidden="true"
            class="gift icon"
          />
        </button>
      </div>
      <div
        class="ui segment"
      >
        <table
          class="track_table"
          role="table"
        >
          <thead>
            <tr
              role="row"
            >
              <th
                colspan="1"
                role="columnheader"
              >
                 
              </th>
              <th
                colspan="1"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <span
                  class="title_with_icon"
                  data-testid="position-header"
                >
                  <i
                    aria-hidden="true"
                    class="hashtag icon"
                  />
                  <i
                    aria-hidden="true"
                    class="sort content ascending icon"
                  />
                </span>
              </th>
              <th
                colspan="1"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <span
                  class="center_aligned"
                >
                  <i
                    aria-hidden="true"
                    class="image icon"
                  />
                </span>
              </th>
              <th
                colspan="1"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <span
                  class="title_with_icon"
                >
                  Title
                  <i
                    aria-hidden="true"
                    class="sort content ascending disabled icon"
                  />
                </span>
              </th>
              <th
                colspan="1"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <span
                  class="title_with_icon"
                >
                  Artist
                  <i
                    aria-hidden="true"
                    class="sort content ascending disabled icon"
                  />
                </span>
              </th>
              <th
                colspan="1"
                role="columnheader"
              >
                <span
                  class="select_header"
                >
                  <div
                    class="ui fitted checkbox nuclear checkbox"
                    style="cursor: pointer;"
                  >
                    <input
                      class="hidden"
                      readonly=""
                      tabindex="0"
                      title="Toggle All Rows Selected"
                      type="checkbox"
                      value=""
                    />
                    <label />
                  </div>
                </span>
              </th>
            </tr>
          </thead>
          <tbody
            data-rbd-droppable-context-id="2"
            data-rbd-droppable-id="track_table"
            role="rowgroup"
          >
            <tr
              class=""
              data-rbd-draggable-context-id="2"
              data-rbd-draggable-id="test track 2 1"
              data-testid="track-table-row"
              role="row"
            >
              <td
                class="narrow delete_cell"
                role="cell"
              >
                <button
                  class="ui tiny basic circular icon button nuclear button borderless"
                  data-testid="delete-button"
                >
                  <i
                    aria-hidden="true"
                    class="times icon"
                  />
                </button>
              </td>
              <td
                class="position_cell narrow"
                data-testid="position-cell"
                role="cell"
              >
                <button
                  class="ui pink tiny circular icon button nuclear button add_button"
                  data-testid="play-now"
                >
                  <i
                    aria-hidden="true"
                    class="play icon"
                  />
                </button>
                <span
                  class="position_cell_value"
                >
                  1
                </span>
              </td>
              <td
                class="thumbnail_cell narrow"
                role="cell"
              >
                <img
                  class="thumbnail"
                  src="https://test-track-thumb-url"
                />
              </td>
              <td
                class="title_cell"
                data-testid="title-cell"
                role="cell"
              >
                <span
                  class="title_cell_content"
                >
                  <span
                    class="title_cell_value"
                  >
                    test track 2
                  </span>
                  <span
                    class="title_cell_buttons"
                  >
                    <button
                      class="ui tiny basic circular icon button nuclear button borderless title_cell_button"
                      data-testid="add-to-queue"
                    >
                      <i
                        aria-hidden="true"
                        class="plus icon"
                      />
                    </button>
                    <button
                      class="ui tiny basic circular icon button nuclear button borderless title_cell_button"
                      data-testid="track-popup-trigger"
                    >
                      <i
                        aria-hidden="true"
                        class="ellipsis horizontal icon"
                      />
                    </button>
                  </span>
                </span>
              </td>
              <td
                role="cell"
              >
                test artist 2
              </td>
              <td
                class="select_cell narrow"
                role="cell"
              >
                <div
                  class="ui fitted checkbox nuclear checkbox"
                  style="cursor: pointer;"
                >
                  <input
                    class="hidden"
                    readonly=""
                    tabindex="0"
                    title="Toggle Row Selected"
                    type="checkbox"
                    value=""
                  />
                  <label />
                </div>
              </td>
            </tr>
            <tr
              class=""
              data-rbd-draggable-context-id="2"
              data-rbd-draggable-id="test track 1 0"
              data-testid="track-table-row"
              role="row"
            >
              <td
                class="narrow delete_cell"
                role="cell"
              >
                <button
                  class="ui tiny basic circular icon button nuclear button borderless"
                  data-testid="delete-button"
                >
                  <i
                    aria-hidden="true"
                    class="times icon"
                  />
                </button>
              </td>
              <td
                class="position_cell narrow"
                data-testid="position-cell"
                role="cell"
              >
                <button
                  class="ui pink tiny circular icon button nuclear button add_button"
                  data-testid="play-now"
                >
                  <i
                    aria-hidden="true"
                    class="play icon"
                  />
                </button>
                <span
                  class="position_cell_value"
                >
                  2
                </span>
              </td>
              <td
                class="thumbnail_cell narrow"
                role="cell"
              >
                <img
                  class="thumbnail"
                  src="https://test-track-thumb-url"
                />
              </td>
              <td
                class="title_cell"
                data-testid="title-cell"
                role="cell"
              >
                <span
                  class="title_cell_content"
                >
                  <span
                    class="title_cell_value"
                  >
                    test track 1
                  </span>
                  <span
                    class="title_cell_buttons"
                  >
                    <button
                      class="ui tiny basic circular icon button nuclear button borderless title_cell_button"
                      data-testid="add-to-queue"
                    >
                      <i
                        aria-hidden="true"
                        class="plus icon"
                      />
                    </button>
                    <button
                      class="ui tiny basic circular icon button nuclear button borderless title_cell_button"
                      data-testid="track-popup-trigger"
                    >
                      <i
                        aria-hidden="true"
                        class="ellipsis horizontal icon"
                      />
                    </button>
                  </span>
                </span>
              </td>
              <td
                role="cell"
              >
                test artist 1
              </td>
              <td
                class="select_cell narrow"
                role="cell"
              >
                <div
                  class="ui fitted checkbox nuclear checkbox"
                  style="cursor: pointer;"
                >
                  <input
                    class="hidden"
                    readonly=""
                    tabindex="0"
                    title="Toggle Row Selected"
                    type="checkbox"
                    value=""
                  />
                  <label />
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <div
    class="nuclear player_bar"
  >
    <div
      class="nuclear seekbar"
      data-testid="seekbar"
    >
      <div
        class="nuclear seekbar_progress"
        data-testid="seekbar-fill"
        style="width: 0%;"
      />
    </div>
    <div
      class="player_bar_bottom"
    >
      <div
        class="track_info"
      >
        <div
          class="nuclear cover_container"
        >
          <img
            src="test-file-stub"
          />
        </div>
      </div>
      <div
        class="player_controls"
      >
        <button
          class="player_button disabled"
          data-testid="player-controls-back"
        >
          <i
            aria-hidden="true"
            class="step backward large inverted icon"
          />
        </button>
        <button
          class="player_button disabled"
          data-testid="player-controls-play"
        >
          <i
            aria-hidden="true"
            class="play big inverted icon"
          />
        </button>
        <button
          class="player_button disabled"
          data-testid="player-controls-forward"
        >
          <i
            aria-hidden="true"
            class="step forward large inverted icon"
          />
        </button>
      </div>
      <div
        class="volume_controls_container"
      >
        <div
          class="play_options"
        >
          <i
            aria-hidden="true"
            class="repeat large icon play_option_icon"
            data-testid="loop-play-option"
          />
          <i
            aria-hidden="true"
            class="random large icon play_option_icon"
            data-testid="shuffle-play-option"
          />
          <i
            aria-hidden="true"
            class="magic large icon play_option_icon"
            data-testid="autoradio-play-option"
          />
          <i
            aria-hidden="true"
            class="compress large icon play_option_icon"
            data-testid="mini-player-play-option"
          />
        </div>
        <div
          class="volume_controls"
        >
          <div
            class="volume_icon"
          >
            <i
              aria-hidden="true"
              class="volume up large icon"
            />
          </div>
          <div
            class="volume_slider"
          >
            <div
              class="range"
              style="width: 100%;"
            >
              <div
                class="baseDiv"
                style="height: 12px;"
              >
                <div
                  class="track"
                  style="border-radius: 4px; background: rgb(68, 71, 90); top: 4px; height: 4px;"
                />
                <div
                  class="fill"
                  style="border-radius: 4px; background: rgb(248, 248, 242); width: calc(100% * 0.5 + 6px); top: 4px; height: 4px;"
                />
                <div
                  class="thumb"
                  style="width: 12px; height: 12px; border-radius: 12px; background: rgb(248, 248, 242);"
                />
                <input
                  class="range_input"
                  max="100"
                  min="0"
                  style="top: 4px; height: 12px; width: calc(100% - 12px); margin-left: 6px; margin-right: 6px;"
                  type="range"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-atomic="true"
    aria-live="assertive"
    id="rbd-announcement-2"
    style="position: absolute; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%);"
  />
  <div
    id="rbd-hidden-text-2-hidden-text-8"
    style="display: none;"
  >
    
  Press space bar to start a drag.
  When dragging you can use the arrow keys to move the item around and escape to cancel.
  Some screen readers may require you to be in focus mode or to use your pass through key

  </div>
  <div
    style="display: flex; position: absolute; left: 0px; top: 0px; bottom: 0px; transform: translate(0px, 0px);"
  >
    <div
      class="ui top left popup transition visible context_popup"
      style="position: initial;"
    >
      <div
        class="popup_header"
      >
        <div
          class="popup_thumb"
        >
          <img
            src="https://test-track-thumb-url"
          />
        </div>
        <div
          class="popup_info"
        >
          <div
            class="popup_title"
          >
            test track 2
          </div>
          <div
            class="popup_artist"
          >
            by test artist 2
          </div>
        </div>
      </div>
      <hr />
      <div
        class="popup_buttons"
      >
        <a
          aria-label="Add track to queue"
          class="popup_button"
          data-testid="track-popup-add-queue"
          href="#"
        >
          <i
            aria-hidden="true"
            class="plus icon"
          />
           Add to queue
        </a>
        <a
          aria-label="Add track to play next"
          class="popup_button"
          data-testid="track-popup-play-next"
          href="#"
        >
          <i
            aria-hidden="true"
            class="play icon"
          />
           Play next
        </a>
        <a
          aria-label="Play this track now"
          class="popup_button"
          data-testid="track-popup-play-now"
          href="#"
        >
          <i
            aria-hidden="true"
            class="play icon"
          />
           Play now
        </a>
        <a
          aria-label="Download this track"
          class="popup_button"
          data-testid="track-popup-download"
          href="#"
        >
          <i
            aria-hidden="true"
            class="download icon"
          />
           Download
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
